# yew-app-template

./: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package.json
src/app/: mod.rs  page.rs  routes.rs
src/app/not_found/: mod.rs
src/components/: mod.rs
src/styles/: components.scss  main.scss
