[package]
name = "yewi-template"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
yew = { version = "0.23.0", features = ["csr", "serde"] }
wasm-logger = "0.2.0"
yew-router = "0.20.0"
web-sys = { version = "0.3.83", features = ["DataTransfer"] }
gloo = "0.12.0"
yew_icons = { version = "0.10.0", features = ["lucide"] }